[gd_scene load_steps=2 format=3 uid="uid://weapon_ui_scene"]

[ext_resource type="Script" path="res://scripts/explore/weapon_ui.gd" id="1"]

[node name="WeaponUI" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -20.0
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
mouse_filter = 2

[node name="WeaponIcon" type="TextureRect" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(48, 48)
texture_filter = 1
expand_mode = 1
stretch_mode = 5

[node name="AmmoLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "0/0"
horizontal_alignment = 1

[node name="ReloadProgress" type="ProgressBar" parent="VBox"]
layout_mode = 2
max_value = 1.0
value = 1.0
show_percentage = false

[node name="MobileControls" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftShootButton" type="Button" parent="MobileControls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = -100.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "射击"

[node name="RightShootButton" type="Button" parent="MobileControls"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
text = "射击"

[node name="ReloadButton" type="Button" parent="MobileControls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -180.0
offset_right = -20.0
offset_bottom = -120.0
grow_horizontal = 0
grow_vertical = 0
text = "换弹 (R)"

[node name="AimJoystick" type="Control" parent="MobileControls"]
layout_mode = 1
anchors_preset = 4
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0

